--- a/examples/components/base-example/Makefile
+++ b/examples/components/base-example/Makefile
@@ -1,7 +1,8 @@
-include ../../../../tools/mk/global.mk
+include ../../../mk/global.mk
 
-CXXFLAGS += -g -I$(SILICA_BASE)/lib/libexo
-LIBS = -L$(SILICA_BASE)/lib/libexo -lexo -ldl
+CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcomponent
+BOOST_LIBS = -lboost_thread
+LIBS = -L$(XDK_BASE)/lib/libexo -lexo -L$(XDK_BASE)/lib/libcomponent -lcomponent -ldl $(BOOST_LIBS)
 
 all: hello_component example_client
 
@@ -9,7 +10,7 @@ example_client:
 	g++ $(CXXFLAGS) -g -o $@ main.cc $(LIBS)
 
 hello_component:
-	g++ $(CXXFLAGS) -g -shared -fPIC -Wl,-soname,libhello.so.1 -o libhello.so.1 hello_component.cc
+	g++ $(CXXFLAGS) -g -shared -fPIC -Wl,-soname,libhello.so.1 -o libhello.so.1 hello_component.cc $(LIBS)
 
 clean:
 	rm -f example *.o
