extended grant to resource entries

--- a/tools/devgrant/Makefile
+++ b/tools/devgrant/Makefile
@@ -1,5 +1,5 @@
 SRC=devgrant.cc
-LIBS=-L/usr/local/lib -lboost_program_options -lrt
+LIBS=-L/usr/local/lib -lboost_program_options -lboost_filesystem -lboost_system -lrt
 
 all: devgrant
 
