--- a/testing/exokernel/memory/base_slab/Makefile
+++ b/testing/exokernel/memory/base_slab/Makefile
@@ -1,17 +1,18 @@
-include ../../../../../tools/mk/global.mk
+include ../../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(SILICA_BASE)/lib/libexo
-LIBS = -L$(SILICA_BASE)/lib/libexo -lexo -lnuma
+CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
+LIBS = -L$(XDK_BASE)/lib/libexo  -L$(XDK_BASE)/lib/libcommon -lcommon -lexo -lnuma
+
 
 all: baseslab
 
 baseslab: $(OBJS) 
-	g++ -Wall $(CXXFLAGS) -o baseslab $(OBJS) $(LIBS) -Wl,-rpath=$(SILICA_BASE)/lib/libexo
+	g++ -Wall $(CXXFLAGS) -o baseslab $(OBJS) $(LIBS) -Wl,-rpath=$(XDK_BASE)/lib/libexo
 
 
-$(SILICA_BASE)/lib/libexo/libexo.so:
-	make -C $(SILICA_BASE)/lib/libexo
+$(XDK_BASE)/lib/libexo/libexo.so:
+	make -C $(XDK_BASE)/lib/libexo
 
 clean:
 	rm -Rf *.o baseslab obj/
