--- a/testing/exokernel/test-data-structures/Makefile
+++ b/testing/exokernel/test-data-structures/Makefile
@@ -1,17 +1,17 @@
-include ../../../../tools/mk/global.mk
+include ../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(SILICA_BASE)/lib/libexo
-LIBS = -L$(SILICA_BASE)/lib/libexo -lexo -lnuma
+CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
+LIBS = -L$(XDK_BASE)/lib/libexo -lexo -lnuma
 
 all: test-ds
 
 test-ds: $(OBJS) 
-	g++ -g -Wall $(CXXFLAGS) -o test-ds $(OBJS) $(LIBS) -Wl,-rpath=$(SILICA_BASE)/lib/libexo -lpthread
+	g++ -g -Wall $(CXXFLAGS) -o test-ds $(OBJS) $(LIBS) -Wl,-rpath=$(XDK_BASE)/lib/libexo -lpthread
 
 
-$(SILICA_BASE)/lib/libexo/libexo.so:
-	make -C $(SILICA_BASE)/lib/libexo
+$(XDK_BASE)/lib/libexo/libexo.so:
+	make -C $(XDK_BASE)/lib/libexo
 
 clean:
 	rm -Rf *.o test-ds obj/
