--- a/mk/global.mk.in
+++ b/mk/global.mk.in
@@ -1,4 +1,4 @@
-XDK_BASE = /home/dwaddington/xdk
+XDK_BASE = $(HOME)/xdk
 
 XDK_INCLUDES = -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcomponent -I$(XDK_BASE)/lib/libcommon
 XDK_LIBS = -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcomponent -L$(XDK_BASE)/lib/libcommon -lcomponent -lexo -lcommon
