--- a/lib/libexo/Makefile.in
+++ b/lib/libexo/Makefile.in
@@ -1,7 +1,7 @@
 include ../../mk/global.mk
 
 SOURCES := $(wildcard *.cc)
-CXXFLAGS += -g -fPIC -Wall
+CXXFLAGS += -g -fPIC -Wall $(XDK_INCLUDES)
 
 all: libexo.so libexo.a
 
