added logging macro in Makefile

--- a/drivers/x540-nic/Makefile
+++ b/drivers/x540-nic/Makefile
@@ -1,7 +1,7 @@
 include ../../mk/global.mk
 SILICA_BASE = /home/jkuang/xdk
 BOOST_LIBS = -lboost_thread
-CXXFLAGS += -g -O3 -I$(SILICA_BASE)/lib/libexo -I$(SILICA_BASE)/lib/libexo/exo/ -I$(SILICA_BASE)/drivers/x540-nic/ -I$(SILICA_BASE)/net -I$(SILICA_BASE)/net/micro-udp -I$(SILICA_BASE) -I$(SILICA_BASE)/include -I$(SILICA_BASE)/lib/libcommon -I$(SILICA_BASE)/lib/libcomponent/component -I$(SILICA_BASE)/lib/libcomponent/
+CXXFLAGS += -g -O3 -DCONFIG_BUILD_DEBUG -I$(SILICA_BASE)/lib/libexo -I$(SILICA_BASE)/lib/libexo/exo/ -I$(SILICA_BASE)/drivers/x540-nic/ -I$(SILICA_BASE)/net -I$(SILICA_BASE)/net/micro-udp -I$(SILICA_BASE) -I$(SILICA_BASE)/include -I$(SILICA_BASE)/lib/libcommon -I$(SILICA_BASE)/lib/libcomponent/component -I$(SILICA_BASE)/lib/libcomponent/
 LIBS = $(XDK_LIBS) $(BOOST_LIBS) -L$(SILICA_BASE)/lib/libexo -L$(SILICA_BASE)/lib/libcomponent -lexo -lcomponent -lpthread -lnuma -ldl -lrt -lm -ltinyxml  
 
 NIC_COMPONENT_SRC := nic_component.cc \
