started test driver for dma apis

--- a/testing/exokernel/memory/hugepage/Makefile
+++ b/testing/exokernel/memory/hugepage/Makefile
@@ -1,4 +1,4 @@
-include ../../../../../tools/mk/global.mk
+include ../../../../mk/global.mk
 
 SOURCES = main.cc
 CXXFLAGS += -g -I$(SILICA_BASE)/lib/libexo
