deleted makefile in libexo

--- a/lib/libexo/Makefile.in
+++ b/lib/libexo/Makefile.in
@@ -3,17 +3,17 @@ include ../../mk/global.mk
 SOURCES := $(wildcard *.cc)
 CXXFLAGS += -g -fPIC -Wall $(XDK_INCLUDES)
 
-all: libexo.so libexo.a
+all: libexo.a
 
 libexo.a: $(OBJS)
 	ar rcs libexo.a $(OBJS)
 
-libexo.so: $(OBJS)
-	gcc -g -shared -Wl,-soname,libexo.so -o libexo.so $(OBJS) -ldl -lnuma
+#libexo.so: $(OBJS)
+#	gcc -g -shared -Wl,-soname,libexo.so -o libexo.so $(OBJS) -ldl -lnuma
 
 clean:
 	rm -Rf obj
-
+	rm *.a
 TAGS:
 	etags *.cc *.h
 
