added huge page DMA memory allocation

--- a/lib/libexo/Makefile
+++ b/lib/libexo/Makefile
@@ -1,7 +1,8 @@
 include ../../mk/global.mk
 
 SOURCES := $(wildcard *.cc)
-CXXFLAGS += -g -fPIC -Wall $(XDK_INCLUDES)
+CXXFLAGS += -g -fPIC -Wall $(XDK_INCLUDES) 
+CXXFLAGS += -DCONFIG_BUILD_DEBUG
 
 all: libexo.a
 
