--- a/drivers/nvme-ssd/Makefile
+++ b/drivers/nvme-ssd/Makefile
@@ -2,10 +2,11 @@ include ../../mk/global.mk
 
 TARGET = nvme_drv
 SOURCES = cq_thread.cc nvme_command_admin.cc nvme_common.cc nvme_queue.cc \
-nvme_command.cc nvme_device.cc tests.cc nvme_drv_component.cc mt_tests.cc
+nvme_command.cc nvme_device.cc tests.cc nvme_drv_component.cc \
+mt_tests.cc verify_tests.cc
 
 INCLUDES = -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon -I$(XDK_BASE)/lib/libcomponent
-#CXXFLAGS += -DCONFIG_BUILD_DEBUG
+CXXFLAGS += -DCONFIG_BUILD_DEBUG
 #CXXFLAGS += -pg
 CXXFLAGS += -g -O2 -fPIC $(INCLUDES)
 
