--- a/drivers/ahci/Makefile
+++ b/drivers/ahci/Makefile
@@ -2,12 +2,12 @@ include ../../mk/global.mk
 
 TARGET = ahci_drv
 SOURCES = main.cc ahci_device.cc ahci_port.cc debug.cc
-CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
-LIBS = -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcommon -L$(XDK_BASE)/lib/libcomponent -lcommon -lcomponent -lexo -lpthread -lrt -lnuma
+CXXFLAGS += $(XDK_INCLUDES)
+LIBS = $(XDK_LIBS) -lpthread -lrt -lnuma
 
-all: exotest
+all: ahci_drv
 
-exotest: $(OBJS) $(XDK_BASE)/lib/libexo/libexo.so
+ahci_drv: $(OBJS) $(XDK_BASE)/lib/libexo/libexo.so
 	g++ -g -Wall $(CXXFLAGS) -o ahci_drv $(OBJS) $(LIBS) -Wl,-rpath=$(XDK_BASE)/lib/libexo
 
 
@@ -19,3 +19,4 @@ clean:
 
 
 .PHONY: clean $(XDK_BASE)/lib/libexo/libexo.so
+
