--- a/drivers/nvme-ssd/Makefile
+++ b/drivers/nvme-ssd/Makefile
@@ -9,6 +9,7 @@ INCLUDES = -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon -I$(XDK_BASE)/li
 
 #CXXFLAGS += -DCONFIG_IRQ_COAL
 #CXXFLAGS += -DCONFIG_BUILD_DEBUG
+#CXXFLAGS += -DEXPONENTIAL_BACKOFF_LOOP
 #CXXFLAGS += -pg
 CXXFLAGS += -g -O2 -fPIC $(INCLUDES)
 
