add macro to disable batch manager for performance testing

--- a/drivers/nvme-ssd/Makefile
+++ b/drivers/nvme-ssd/Makefile
@@ -10,6 +10,7 @@ INCLUDES = -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon -I$(XDK_BASE)/li
 #CXXFLAGS += -DCONFIG_IRQ_COAL
 #CXXFLAGS += -DCONFIG_BUILD_DEBUG
 #CXXFLAGS += -DEXPONENTIAL_BACKOFF_LOOP
+#CXXFLAGS += -DDISABLE_BATCH_MANAGER_FOR_TESTING
 #CXXFLAGS += -pg
 CXXFLAGS += -g -O2 -fPIC $(INCLUDES)
 
