--- a/drivers/nvme-ssd/Makefile
+++ b/drivers/nvme-ssd/Makefile
@@ -2,8 +2,7 @@ include ../../mk/global.mk
 
 TARGET = nvme_drv
 SOURCES = cq_thread.cc nvme_command_admin.cc nvme_common.cc nvme_queue.cc \
-nvme_command.cc nvme_device.cc tests.cc nvme_drv_component.cc \
-mt_tests.cc verify_tests.cc 
+nvme_command.cc nvme_device.cc tests.cc nvme_drv_component.cc 
 
 INCLUDES = -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon -I$(XDK_BASE)/lib/libcomponent
 
