--- a/mk/configure.ac
+++ b/mk/configure.ac
@@ -19,9 +19,11 @@ esac
 if $use_numa
 then
 	AC_SUBST(numa_flag, "-D NUMA_ENABLE")
+	AC_SUBST(numa_lib, "-lnuma")
 	AC_CHECK_LIB([numa],[numa_available],[],AC_MSG_ERROR([libnuma-dev not installed]))
 else
 	AC_SUBST(numa_flag, "-D NUMA_DISABLE")
+	AC_SUBST(numa_lib, " ")
 fi
 
 # this should work but it doesn't?
