code revamp for numa dependency

--- a/drivers/x540-nic/Makefile
+++ b/drivers/x540-nic/Makefile
@@ -1,7 +1,7 @@
 include ../../mk/global.mk
 BOOST_LIBS = -lboost_thread
 CXXFLAGS += -g -O3 -std=c++11 -Wall -DCONFIG_BUILD_DEBUG -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libexo/exo/ -I$(XDK_BASE)/drivers/x540-nic/ -I$(XDK_BASE) -I$(XDK_BASE)/include -I$(XDK_BASE)/lib/libcommon -I$(XDK_BASE)/lib/libcomponent/component -I$(XDK_BASE)/lib/libcomponent/
-LIBS = $(XDK_LIBS) $(BOOST_LIBS) -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcomponent -lexo -lcomponent -lpthread -lnuma -ldl -lrt -lm -ltinyxml  
+LIBS = $(XDK_LIBS) $(BOOST_LIBS) -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcomponent -lexo -lcomponent -lpthread $(XDK_NUMA_LIB) -ldl -lrt -lm -ltinyxml  
 
 NIC_COMPONENT_SRC := nic_component.cc \
                      ./x540/x540_device.cc \
