--- a/testing/exokernel/memory/driver-dma/Makefile
+++ b/testing/exokernel/memory/driver-dma/Makefile
@@ -3,7 +3,7 @@ include ../../../../mk/global.mk
 TARGET = test_drv
 SOURCES = main.cc 
 CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon -DCONFIG_BUILD_DEBUG
-LIBS = -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcommon -L$(XDK_BASE)/lib/libcomponent -lcommon -lcomponent -lexo -lpthread -lrt -lnuma
+LIBS = -L$(XDK_BASE)/lib/libexo -L$(XDK_BASE)/lib/libcommon -L$(XDK_BASE)/lib/libcomponent -lcommon -lcomponent -lexo -lpthread -lrt $(XDK_NUMA_LIB)
 
 all: test_drv
 
