--- a/testing/exokernel/test-client-3/Makefile
+++ b/testing/exokernel/test-client-3/Makefile
@@ -2,7 +2,7 @@ include ../../../mk/global.mk
 
 SOURCES = main.cc
 CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
-LIBS = -L$(XDK_BASE)/lib/libexo -lexo -lnuma
+LIBS = -L$(XDK_BASE)/lib/libexo -lexo $(XDK_NUMA_LIB) 
 
 all: test-client-3
 
