make everything compile after numa wrapper change

--- a/testing/exokernel/memory/base_slab/Makefile
+++ b/testing/exokernel/memory/base_slab/Makefile
@@ -1,9 +1,8 @@
 include ../../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
-LIBS = -L$(XDK_BASE)/lib/libexo  -L$(XDK_BASE)/lib/libcommon -lcommon -lexo $(XDK_NUMA_LIB) 
-
+CXXFLAGS += -g $(XDK_INCLUDES)
+LIBS = $(XDK_LIBS) $(XDK_NUMA_LIB)
 
 all: baseslab
 
@@ -18,4 +17,4 @@ clean:
 	rm -Rf *.o baseslab obj/
 
 
-.PHONY: clean
+.PHONY: baseslab
