--- a/testing/exokernel/memory/hugepage/Makefile
+++ b/testing/exokernel/memory/hugepage/Makefile
@@ -1,20 +1,20 @@
 include ../../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(SILICA_BASE)/lib/libexo
-LIBS = -L$(SILICA_BASE)/lib/libexo -lexo $(XDK_NUMA_LIB) 
+CXXFLAGS += -g $(XDK_INCLUDES)
+LIBS = $(XDK_LIBS) $(XDK_NUMA_LIB) 
 
 all: hugepage
 
 hugepage: $(OBJS) 
-	g++ -static -g -Wall $(CXXFLAGS) -o hugepage $(OBJS) $(LIBS) -Wl,-rpath=$(SILICA_BASE)/lib/libexo
+	g++ -static -g -Wall $(CXXFLAGS) -o hugepage $(OBJS) $(LIBS) -Wl,-rpath=$(XDK_BASE)/lib/libexo
 
 
-$(SILICA_BASE)/lib/libexo/libexo.so:
-	make -C $(SILICA_BASE)/lib/libexo
+$(XDK_BASE)/lib/libexo/libexo.so:
+	make -C $(XDK_BASE)/lib/libexo
 
 clean:
 	rm -Rf *.o hugepage obj/
 
 
-.PHONY: clean
+.PHONY: hugepage
