--- a/testing/exokernel/test-data-structures/Makefile
+++ b/testing/exokernel/test-data-structures/Makefile
@@ -1,8 +1,8 @@
 include ../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
-LIBS = -L$(XDK_BASE)/lib/libexo -lexo $(XDK_NUMA_LIB)
+CXXFLAGS += -g $(XDK_INCLUDES) 
+LIBS = $(XDK_LIBS) $(XDK_NUMA_LIB)
 
 all: test-ds
 
@@ -17,4 +17,4 @@ clean:
 	rm -Rf *.o test-ds obj/
 
 
-.PHONY: clean
+.PHONY: test-ds
