--- a/testing/exokernel/test-client-2/Makefile
+++ b/testing/exokernel/test-client-2/Makefile
@@ -1,8 +1,8 @@
 include ../../../mk/global.mk
 
 SOURCES = main.cc
-CXXFLAGS += -g -I$(XDK_BASE)/lib/libexo -I$(XDK_BASE)/lib/libcommon
-LIBS = -L$(XDK_BASE)/lib/libexo -lexo $(XDK_NUMA_LIB) 
+CXXFLAGS += -g $(XDK_INCLUDES)
+LIBS = $(XDK_LIBS) $(XDK_NUMA_LIB)
 
 all: test-client-2
 
@@ -13,4 +13,4 @@ clean:
 	rm -Rf *.o test-client-2 obj/
 
 
-.PHONY: clean
+.PHONY: test-client-2
